--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.22",
     "prettier": "2.8.8",
+    "tailwind-scrollbar": "^3.0.0",
     "tailwindcss": "^3.3.1"
   }
 }
